# WEBMACROMECH

./: .gitignore  MANIFEST.in  export_import.py  fullchain.pem  privkey.pem  pyproject.toml  run.py  test1.db  tsconfig.json  webmacromech copy.db  webmacromech.db
docs/: WebMacroMech.docx  WebMacroMech.htm  _notes.txt  notes.txt  opened_probs  ~$bMacroMech.docx
docs/Справка/: Help.docx  ~$Help.docx  ~WRL0005.tmp
docs/Стаття/: Macromechanics.docx  New Microsoft Excel Worksheet.xlsx  notes.txt  ~$cromechanics.docx  ~$аття. Закон Гука в моделюванні.docx  ~WRL4073.tmp  Стаття. Закон Гука в моделюванні.docx  стаття - ПРУЖНІ ВЗАЄМОДІЇ В ІМІТАЦІЙНОМУ МОДЕЛЮВАННІ МЕХАНІЧНИХ СИСТЕМ.docx
src/: Ball.ts  Box.ts  ControllerStore.ts  Line.ts  Link.ts  View.ts
static/: help.html  index.css  templates.css
templates/: add_prob.html  admin.html  index.html  layout.html  login.html  register.html
ts/: Ball.ts  Box.ts  Controller.ts  ControllerStore.ts  Geometry.ts  Problem.ts  View.ts  globals.ts  main.ts
web_macro_mech/: __init__.py  models.py  webmacromech.db
web_macro_mech.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web_macro_mech/routes/: __init__.py  auth.py  main.py
web_macro_mech/static/: help.html  index-new.css  index.css
web_macro_mech/templates/: add_prob.html  admin.html  del_prob.html  edit_prob.html  index.html  layout.html  login.html  prob.html  register.html
