[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_macro_mech"  
version = "0.1.0"  
description = "Macromechanics with WEB interface"  
authors = [{ name = "vmbo", email = "vmbo@gmail.com" }] 
requires-python = ">=3.8"   

dependencies = [
    "flask >= 2.0.0,<3.0.0",
    "pandas >= 1.3.0,<3.0.0",
    "openpyxl >= 3.0.0,<4.0.0"
]

[tool.setuptools.packages]
find = { include = ["web_macro_mech*", "web_macro_mech/templates*"] }
