[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_macro_mech"  
version = "0.1.0"  
description = "Macromechanics with WEB interface"  
authors = [{ name = "vmbo", email = "vmbo@gmail.com" }] 
requires-python = ">=3.8"   

dependencies = [
    "flask >= 2.0.0,<3.0.0",
    "flask_bcrypt >= 1.0.1",
    "flask_login >= 0.6.3",
    "sqlalchemy >= 2.0.40"
]

[tool.setuptools.packages.find]
include = ["web_macro_mech*"]

[tool.setuptools.package-data]
"web_macro_mech" = ["static/**", "templates/**", "webmacromech.db"]